--- a/traefik.yml
+++ b/traefik.yml
@@ -4,13 +4,12 @@ services:
   traefik:
     image: traefik:${VERSION:-v1.7.24-alpine}
     ports:
-      - target: 80 # http://bit.ly/2SfiOhk
-        published: 80
-        protocol: tcp
-        mode: host
+      - { target: 80, published: 80, mode: host, protocol: tcp } 
+      # - { target: 8080, published: 8080, mode: host, protocol: tcp } 
     command:
       # - --debug
       # - --loglevel=INFO
+      - --web
       - --entryPoints=Name:http Address::80 Compress:true
       - --defaultEntryPoints=http
       - --docker.swarmmode=true
@@ -20,6 +19,13 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock:ro
     deploy:
       mode: ${MODE:-replicated}
+      labels:
+        traefik.enable: "true"
+        traefik.docker.network: traefik-net
+        traefik.port: 8080
+        traefik.backend: traefik
+        traefik.frontend.rule: "Host:${DOMAIN:-traefik.localhost}"
+        traefik.frontend.headers.frameDeny: "true"
       placement:
         constraints: [node.role==manager]
 
